# ProgettoFinale

./: .gitignore  CMakeLists.txt  README.md  SistemaDomotico.h  dispositivo.h  logExample1.txt  logExample2.txt  manuale.cpp  manuale.h  output.txt
include/: DispCicloPrefissato.h  DispManuale.h  Dispositivo.h  Logger.h  SistemaDomotico.h  Tempo.h
src/: DispCicloPrefissato.cpp  DispManuale.cpp  Dispositivo.cpp  Logger.cpp  SistemaDomotico.cpp  Tempo.cpp  main.cpp
